name:                lacroix
version:             0.1.0.0
synopsis:            fizzy n dizzy
description:         crack open a cold one with the boys 
homepage:            https://github.com/chessai/lacroix
license:             MIT
author:              chessai
maintainer:          chessai1996@gmail.com
category:            Acme
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Acme.Lacroix
  build-depends:       base >= 3 && <6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable CuteBoy
  build-depends:       base >=3 && <6
                     , lacroix
  hs-source-dirs:      src 
  main-is:             Main.hs
  other-modules:       Acme.CuteBoy 
  default-language:    Haskell2010
